Use URI instead of URL (#10)